--- a/style/style.css
+++ b/style/style.css
@@ -277,6 +277,25 @@ main > section{
     padding: 30px;
     margin-bottom: 20px;
 }
+/* footer style start here  */
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.footer__description{
+    border: none;
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: #424242;
+    border-radius: 8px;
+    padding: 35px 100px ;
+    text-align: center;
+    background-color: #ffe1bd;
+    margin: 100px 150px;
+}
+
 /* responsive media query style start here */
 
 @media screen and (max-width:576px) {
@@ -329,6 +348,11 @@ main > section{
     .features__img{
         max-width: 100%;
     }
+    .footer__description{
+        width: 100px;
+        padding: 20px 100px;
+    }
+   
 }
 /* media responsive  */
 @media screen and (min-width:577px) and (max-width:992px) {
