--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,11 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+.work-sans-font {
+    font-family: "Work Sans", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
 /* my resat code start here  */
 *{
     margin: 0;
@@ -8,4 +15,160 @@
     list-style-type: none;
     text-decoration: none;
 }
+html{
+    font-size: 66%;
+    scroll-behavior: smooth;
+}
+body{
+    width: 120rem;
+    max-width: 100%;
+    margin: auto;
+    box-shadow: .1rem .1rem .1rem #4c4c4c , -.1rem 0rem .1rem #4c4c4c;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin: 130px 90px;
+    margin-bottom: 130px;
+}
 /* my resat code end here  */
+/* shared styles */
+.display-flex{
+    display: grid;
+}
+.bg-light{
+    background-color: rgba(255 , 144 , 14, .1);
+
+}
+.btn{
+    background-color: #FF900E;
+    border-radius: 8px;
+    border: none;
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding: 20px 25px;
+    color: #fff;
+    cursor: pointer;
+}
+/* dark -02 */
+.text__gray{
+    color: #424242;
+}
+/* dark-03 */
+.text__light-gray{
+    color: #727272;
+}
+
+/* header style start here  */
+
+/* navbar related style start here  */
+.navbar{
+    padding: 1rem 2rem;
+    grid-template-areas: "brand   nav__ul";
+}
+.nav__ul{
+    display: flex;
+    gap: 2.5rem;
+    /* flex-direction: column; */
+    justify-content: flex-end;
+    align-items: flex-end;
+    grid-area: nav__ul;
+}
+
+.brand{
+    font-size: 2.7rem;
+    font-weight: 700;
+    grid-area: brand;
+}
+.nav__link{
+    color: #424242;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 10px 25px;
+    border-radius: 10px ;
+    border: none;
+    transition:all .3s linear;
+}
+:hover.nav__link{
+    background-color: #FF900E;
+    color: #fff;
+}
+.navbar , .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+    
+}
+
+/* BANNer style start here  */
+.banner__content{
+    max-width: 750px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 3.2rem;
+}
+.banner__title{
+    font-weight: 700;
+    font-size: 4rem;
+    text-align: center;
+}
+.banner__description{
+    font-weight: 400;
+    font-size: 1rem;
+    color: #727272;
+    text-align: center;
+    padding: 2rem 1rem;
+}
+.banner__img{
+    width: 100%;
+}
+/* team section style start here */
+.teams__section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 5rem 4rem; */
+    gap: 4rem;
+    flex: 1;
+}
+.team__img-container{
+    display: grid;
+    gap: 24px;
+    grid-template-columns: repeat(2,2fr);
+}
+.features__title{
+    font-size: 2.9rem;
+    font-weight: 700;
+    color: #131313;
+}
+.one{
+    color: #727272;
+    font-weight: auto;
+}
+.two{
+    color: #FF900E;
+    font-weight: 900;
+}
+.features__description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 2rem 0;
+}
+/* responsive media query style start here */
+
+@media screen and(max-width:776px) {
+    html{
+        font-size: 40.5%;
+    }
+    .navbar{
+        grid-template-areas:
+         "brand  0"
+         "nav__ul  0";
+    }
+    .nav__ul{
+        flex-direction: column;
+    }
+}
